updated otp creation
